improved design responsivness

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="LWyPXy9hCJx8eCdMs4QGfrajThByXLcQH5Fi81W_etk" />
+    <meta
+      name="google-site-verification"
+      content="LWyPXy9hCJx8eCdMs4QGfrajThByXLcQH5Fi81W_etk"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ShopHub - Your Online Marketplace</title>
@@ -19,8 +22,7 @@
     <header>
       <section class="section1">
         <nav class="nav1">
-          <a class="logo-box" href="#"
-            >ShopHub</a>
+          <a class="logo-box" href="#">ShopHub</a>
 
           <a class="delivery-box" href="#"
             >Deliver to
@@ -51,9 +53,7 @@
             Hello, sign in<b>Account & Lists▼</b>
           </a>
 
-          <a class="returnandorder-box" href="#"
-            >Return<br /><b>&Orders</b></a
-          >
+          <a class="returnandorder-box" href="#">Return<br /><b>&Orders</b></a>
 
           <a class="cart-box" href="#"
             ><i class="fa-classic fa-solid fa-cart-shopping"></i> Cart</a
@@ -83,11 +83,7 @@
 
         <div class="div2">
           <div class="left" tabindex="0">
-            <img
-              class="arrow"
-              src="left_arrow.png"
-              alt="left arrow"
-            />
+            <img class="arrow" src="left_arrow.png" alt="left arrow" />
           </div>
           <div class="right" tabindex="0">
             <img class="arrow" src="right_arrow.png" />
@@ -98,9 +94,7 @@
           <span
             >You are on ShopHub.com. You can also shop on ShopHub India for
             millions of products with fast local delivery.</span
-          ><a class="blue_links" href="#"
-            >Click here to go to ShopHub.in</a
-          >
+          ><a class="blue_links" href="#">Click here to go to ShopHub.in</a>
         </div>
       </div>
 
@@ -124,33 +118,36 @@
           </div>
 
           <div class="grid4_image1">
-            <a class="tittle" href="#">
-              <img
-                class="image4_box"
-                src="dresses.png"
-                alt="product_image"
-              />dresses</a
-            >
-            <a class="tittle" href="#"
-              ><img class="image4_box" src="knits.png" alt="product_image" />
-              knits</a
-            >
+            <div class="j">
+              <a class="tittle" href="#">
+                <img class="image4_box" src="dresses.png" alt="product_image"
+              /></a>
+              <p>dresses</p>
+            </div>
+            <div class="j">
+              <a class="tittle" href="#"
+                ><img class="image4_box" src="knits.png" alt="product_image" />
+              </a>
+              <p>knits</p>
+            </div>
           </div>
           <div class="grid4_image1">
-            <a class="tittle" href="#">
-              <img
-                class="image4_box"
-                src="jacket.png"
-                alt="product_image"
-              />jacket</a
-            >
-            <a class="tittle" href="#"
-              ><img
-                class="image4_box"
-                src="jewelry.png"
-                alt="product_image"
-              />jewelry
-            </a>
+            <div class="j">
+              <a class="tittle" href="#">
+                <img class="image4_box" src="jacket.png" alt="product_image"
+              /></a>
+              <p>jacket</p>
+            </div>
+            <div class="j">
+              <a class="tittle" href="#"
+                ><img
+                  class="image4_box"
+                  src="jewelry.png"
+                  alt="product_image"
+                />
+              </a>
+              <p>jewelry</p>
+            </div>
           </div>
           <a class="box_links" href="">Explore more</a>
         </div>
@@ -161,37 +158,43 @@
             <h2>Shop for your home essentials</h2>
           </div>
           <div class="grid4_image1">
-            <a class="tittle" href="#">
-              <img
-                class="image4_box"
-                src="cleaningtool.jpg"
-                alt="product_image"
-              />Cleaning Tools</a
-            >
-            <a class="tittle" href="#"
-              ><img
-                class="image4_box"
-                src="homestorage.jpg"
-                alt="product_image"
-              />
-              Home Storage</a
-            >
+            <div class="j">
+              <a class="tittle" href="#">
+                <img
+                  class="image4_box"
+                  src="cleaningtool.jpg"
+                  alt="product_image"
+              /></a>
+              <p>Cleaning Tools</p>
+            </div>
+            <div class="j">
+              <a class="tittle" href="#"
+                ><img
+                  class="image4_box"
+                  src="homestorage.jpg"
+                  alt="product_image"
+                />
+              </a>
+              <p>Home Storage</p>
+            </div>
           </div>
           <div class="grid4_image1">
-            <a class="tittle" href="#">
-              <img
-                class="image4_box"
-                src="homedecor.jpg"
-                alt="product_image"
-              />Home Decor</a
-            >
-            <a class="tittle" href="#"
-              ><img
-                class="image4_box"
-                src="bedding.jpg"
-                alt="product_image"
-              />Bedding
-            </a>
+            <div class="j">
+              <a class="tittle" href="#">
+                <img class="image4_box" src="homedecor.jpg" alt="product_image"
+              /></a>
+              <p>Home Decor</p>
+            </div>
+            <div class="j">
+              <a class="tittle" href="#"
+                ><img
+                  class="image4_box"
+                  src="bedding.jpg"
+                  alt="product_image"
+                />
+              </a>
+              <p>Bedding</p>
+            </div>
           </div>
           <a class="box_links" href="">Discover more in Home</a>
         </div>
@@ -202,37 +205,46 @@
             <h2>Shop Fashion for less</h2>
           </div>
           <div class="grid4_image1">
-            <a class="tittle" href="#">
-              <img
-                class="image4_box"
-                src="Jeans under.jpg"
-                alt="product_image"
-              />Jeans under $50</a
-            >
-            <a class="tittle" href="#"
-              ><img
-                class="image4_box"
-                src="Top under.jpg"
-                alt="product_image"
-              />
-              Tops under $25</a
-            >
+            <div class="j">
+              <a class="tittle" href="#">
+                <img
+                  class="image4_box"
+                  src="Jeans under.jpg"
+                  alt="product_image"
+              /></a>
+              <p>Jeans under $50</p>
+            </div>
+            <div class="j">
+              <a class="tittle" href="#"
+                ><img
+                  class="image4_box"
+                  src="Top under.jpg"
+                  alt="product_image"
+                />
+              </a>
+              <p>Tops under $25</p>
+            </div>
           </div>
           <div class="grid4_image1">
-            <a class="tittle" href="#">
-              <img
-                class="image4_box"
-                src="Dresses under.jpg"
-                alt="product_image"
-              />Dresses $30</a
-            >
-            <a class="tittle" href="#"
-              ><img
-                class="image4_box"
-                src="Shoes under.jpg"
-                alt="product_image"
-              />Shoes under $50
-            </a>
+            <div class="j">
+              <a class="tittle" href="#">
+                <img
+                  class="image4_box"
+                  src="Dresses under.jpg"
+                  alt="product_image"
+              /></a>
+              <p>Dresses $30</p>
+            </div>
+            <div class="j">
+              <a class="tittle" href="#"
+                ><img
+                  class="image4_box"
+                  src="Shoes under.jpg"
+                  alt="product_image"
+                />
+              </a>
+              <p>Shoes under $50</p>
+            </div>
           </div>
           <a class="box_links" href="">See all deals</a>
         </div>
@@ -253,37 +265,43 @@
             <h2>Save big on school essentials</h2>
           </div>
           <div class="grid4_image1">
-            <a class="tittle" href="#">
-              <img
-                class="image4_box"
-                src="bagpacks.jpg"
-                alt="product_image"
-              />Backpacks</a
-            >
-            <a class="tittle" href="#"
-              ><img
-                class="image4_box"
-                src="electronics.jpg"
-                alt="product_image"
-              />
-              Electronics</a
-            >
+            <div class="j">
+              <a class="tittle" href="#">
+                <img class="image4_box" src="bagpacks.jpg" alt="product_image"
+              /></a>
+              <p>Backpacks</p>
+            </div>
+            <div class="j">
+              <a class="tittle" href="#"
+                ><img
+                  class="image4_box"
+                  src="electronics.jpg"
+                  alt="product_image"
+                />
+              </a>
+              <p>Electronics</p>
+            </div>
           </div>
           <div class="grid4_image1">
-            <a class="tittle" href="#">
-              <img
-                class="image4_box"
-                src="stationary.jpg"
-                alt="product_image"
-              />Stationary</a
-            >
-            <a class="tittle" href="#"
-              ><img
-                class="image4_box"
-                src="Fashion.jpg"
-                alt="product_image"
-              />Fashion
-            </a>
+            <div class="j">
+              <a class="tittle" href="#">
+                <img
+                  class="image4_box"
+                  src="stationary.jpg"
+                  alt="product_image"
+              /></a>
+              <p>Stationary</p>
+            </div>
+            <div class="j">
+              <a class="tittle" href="#"
+                ><img
+                  class="image4_box"
+                  src="Fashion.jpg"
+                  alt="product_image"
+                />
+              </a>
+              <p>Fashion</p>
+            </div>
           </div>
           <a class="box_links" href="">Shop the latest from Home</a>
         </div>
@@ -308,37 +326,43 @@
             <h2>New home arrivals under $50</h2>
           </div>
           <div class="grid4_image1">
-            <a class="tittle" href="#">
-              <img
-                class="image4_box"
-                src="Kitchen & Dining.jpg"
-                alt="product_image"
-              />Kitchen & Dining</a
-            >
-            <a class="tittle" href="#"
-              ><img
-                class="image4_box"
-                src="Home improvement.jpg"
-                alt="product_image"
-              />
-              Home improvement</a
-            >
+            <div class="j">
+              <a class="tittle" href="#">
+                <img
+                  class="image4_box"
+                  src="Kitchen & Dining.jpg"
+                  alt="product_image"
+              /></a>
+              <p>Kitchen & Dining</p>
+            </div>
+            <div class="j">
+              <a class="tittle" href="#"
+                ><img
+                  class="image4_box"
+                  src="Home improvement.jpg"
+                  alt="product_image"
+                />
+              </a>
+              <p>Home improvement</p>
+            </div>
           </div>
           <div class="grid4_image1">
-            <a class="tittle" href="#">
-              <img
-                class="image4_box"
-                src="Decor.jpg"
-                alt="product_image"
-              />Decor</a
-            >
+            <div class="j">
+              <a class="tittle" href="#">
+                <img class="image4_box" src="Decor.jpg" alt="product_image"
+              /></a>
+              <p>Decor</p>
+            </div>
+            <div class="j">
             <a class="tittle" href="#"
               ><img
                 class="image4_box"
                 src="bedding & bath.jpg"
                 alt="product_image"
-              />Bedding & Bath
+              />
             </a>
+            <p>Bedding & Bath</p>
+            </div>
           </div>
           <a class="box_links" href="">Show home products</a>
         </div>
@@ -380,9 +404,7 @@
                 >
               </li>
               <li>
-                <a href=""
-                  >Manage your <br />content and Device</a
-                >
+                <a href="">Manage your <br />content and Device</a>
               </li>
               <li><a href="">Help</a></li>
             </ul>
@@ -433,9 +455,7 @@
 
       <div class="footer2">
         <div class="footer_toogle">
-          <a href="#"
-            ><div class="shophub_logo_footer">ShopHub</div>
-          </a>
+          <a href="#"><div class="shophub_logo_footer">ShopHub</div> </a>
         </div>
 
         <div class="footer_toggle">
@@ -632,9 +652,8 @@
         <ul class="footer3_info_row4">
           <li class="f3_li">
             <a href="">
-              <h5></h5>
-              <br />
-              <br />
+               <h5>MediPack</h5>
+              Pharmacy <br />Simplified
             </a>
           </li>
 
